objects/chargebeeapps__CB_Credit_Note_Allocations__c.object
<CustomObject>
    <fields>
        <fullName>chargebeeapps__Allocated_Amount__c</fullName>
        <label>Allocated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Allocated_At__c</fullName>
        <description>Date of allocation</description>
        <label>Allocated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Credit_Note__c</fullName>
        <label>CB Credit Note</label>
        <referenceTo>chargebeeapps__CB_Credit_Note__c</referenceTo>
        <relationshipLabel>CB Credit Note Allocations</relationshipLabel>
        <relationshipName>CB_Credit_Note_Allocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Inovice_Status__c</fullName>
        <description>Allocated invoice status</description>
        <inlineHelpText>Allocated invoice status</inlineHelpText>
        <label>Inovice Status</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Invoice_Date__c</fullName>
        <description>Allocated invoice date</description>
        <inlineHelpText>Allocated invoice date</inlineHelpText>
        <label>Invoice Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Allocated Invoice</description>
        <label>CB Invoice</label>
        <referenceTo>chargebeeapps__CB_Invoice__c</referenceTo>
        <relationshipLabel>CB Credit Note Allocations</relationshipLabel>
        <relationshipName>CB_Credit_Note_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CB Credit Note Allocation</label>
    <nameField>
        <label>CB Credit Note Allocations Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Credit Note Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>